# faiss

./: .gitignore  CMakeLists.txt  Clustering.cpp  index_factory.cpp
gpu/: CMakeLists.txt
gpu/impl/: IVFAppend.cu  IVFAppend.cuh  IVFBase.cu  IVFBase.cuh  IVFFlat.cu  IVFFlatScan.cu  IVFPQ.cu  IVFPQ.cuh  PQScanMultiPassPrecomputed.cu  RemapIndices.cpp  RemapIndices.h
gpu/test/: CMakeLists.txt  TestGpuIndexBinaryFlat.cpp  TestGpuIndexFlat.cpp  TestGpuIndexIVFFlat.cpp  TestGpuIndexIVFPQ.cpp  TestGpuMemoryException.cpp  TestUtils.cpp  test_gpu_index.py
impl/: index_read.cpp  index_write.cpp
python/: setup.py  swigfaiss.swig
tests/: CMakeLists.txt  test_dealloc_invlists.cpp  test_index.py  test_ivfpq_codec.cpp  test_ivfpq_indexing.cpp  test_lowlevel_ivf.cpp  test_pairs_decoding.cpp  test_params_override.cpp  test_sliding_ivf.cpp
tutorial/cpp/: 1-Flat.cpp  2-IVFFlat.cpp  3-IVFPQ.cpp  4-GPU.cpp  5-Multiple-GPUs.cpp  CMakeLists.txt
utils/: utils.cpp
